<resources>
    <string name="app_name">TrySomethingNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_text">Click Text</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
</resources>
