<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_constraintVertical_chainStyle="spread">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_text_input_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
            android:layout_marginTop="150dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp" >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
            app:layout_constraintBottom_toTopOf="@+id/confirm_text_input_layout"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
            android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toTopOf="@+id/click_text"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:id="@+id/confirm_text_input_edit_text"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:hint="@string/click_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_text"
            app:layout_constraintTop_toBottomOf="@+id/confirm_text_input_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/remember_me"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
            app:layout_constraintBottom_toTopOf="@+id/confirm_text_input_layout"
            android:layoutDirection="rtl"/>
</androidx.constraintlayout.widget.ConstraintLayout>